Update index file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="header__title">Quiz-App</h1>
+      <h1 class="header__title">Quiz-App Yeah!</h1>
     </header>
     <ul class="card-list">
       <!--
